<resources>
    <string name="app_name">MyCalculator</string>
    <string name="LeftBracket">(</string>
    <string name="RightBracket">)</string>
    <string name="Division">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Subtraction">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Add">+</string>
    <string name="Copy">С</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="equal_in_rv">%1$s =</string>
    <string name="bt_delete">DELETE</string>
    <string name="tx_equation">text equation</string>
</resources>